# jsonnet-tf

./: Cargo.toml  Dockerfile  Dockerfile.docker  Makefile  jsonnet-tf  justfile  pyproject.toml  run
examples/: iam.libsonnet  lambda.libsonnet  main.jsonnet  main.tf.json  network.libsonnet
examples/lib/: jsonnet_terraform.libsonnet
examples/lib/_gen/: aws.libsonnet  provider.libsonnet
examples/lib/_gen/data_source/: aws_account_primary_contact.libsonnet  aws_acm_certificate.libsonnet  aws_acmpca_certificate.libsonnet  aws_acmpca_certificate_authority.libsonnet  aws_alb.libsonnet  aws_alb_listener.libsonnet  aws_alb_target_group.libsonnet  aws_ami.libsonnet  aws_ami_ids.libsonnet  aws_api_gateway_api_key.libsonnet  aws_api_gateway_api_keys.libsonnet  aws_api_gateway_authorizer.libsonnet  aws_api_gateway_authorizers.libsonnet  aws_api_gateway_domain_name.libsonnet  aws_api_gateway_export.libsonnet  aws_api_gateway_resource.libsonnet  aws_api_gateway_rest_api.libsonnet  aws_api_gateway_sdk.libsonnet  aws_api_gateway_vpc_link.libsonnet  aws_apigatewayv2_api.libsonnet  aws_apigatewayv2_apis.libsonnet  aws_apigatewayv2_export.libsonnet  aws_appmesh_mesh.libsonnet  (+586 more)
jsonnet-tf-py/: Dockerfile  buildrun  pyproject.toml
jsonnet-tf-py/src/jsonnet_tf_py/: .gitignore  jsonnet_tf.py  tf_schema.py
src/: generators.py  jsonnet_tf.py  main.py  main.rs  models.py  terraform_providers.jsonnet  tf_schema.py  utils.py
tests/: test_jsonnet_tf.py
tests/input/: schema.json
tests/resources/: test.jsonnet
tf/: .gitignore  .gititnore  get_provider_schema.sh  main.tf.hidden
(+1692 files in other folders)
