[project]
name = "jsonnet-tf-py"
version = "0.1.0"
description = ""
authors = [
    {name = "Dave Powell",email = "poweld@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dataclass-wizard (>=0.35.0,<0.36.0)",
    "jsonnet (>=0.21.0,<0.22.0)",
    "click (>=8.2.1,<9.0.0)"
]

[tool.poetry]
packages = [{include = "jsonnet_tf_py", from = "src"}]


[tool.poetry.group.dev.dependencies]
ruff = "^0.12.10"
mypy = "^1.17.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
