[project]
name = "jsonnet-tf-py"
version = "0.1.0"
description = ""
authors = [
    {name = "Dave Powell",email = "poweld@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
]

[tool.poetry]
packages = [{include = "jsonnet_tf_py", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
